<resources>
    <string name="app_name">SmartBOLDriver</string>
    <string name="userid">User Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_registration">New Registration</string>
    <string name="device_activation">Device Activation</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="carrier">Carrier</string>
    <string name="fullname">Full name</string>
    <string name="driver_phone">Driver Phone</string>
    <string name="driver_email">Driver Email</string>
    <string name="company_name">Company Name</string>
    <string name="driver_name">Driver\'s Name</string>
    <string name="sign_up">Sign up</string>
    <string name="or">OR</string>e
    <string name="use_activation_code">Use Activation code</string>
    <string name="pic_up_str">PICKUP</string>
    <string name="delivery_str">DELIVERY</string>
    <string name="check_in_str">Check-In</string>
    <string name="check_out_str">Check-Out</string>
    <string name="active_bols">Active BOLs</string>
    <string name="deliveries_str">Deliveries</string>
    <string name="scan_delivery_str">Scan Delivery</string>
    <string name="capture_pod">Capture POD</string>
    <string name="device_id_txt">Device ID : </string>
    <string name="account_txt">Account : </string>
    <string name="choose_time_frame_txt">Choose Time Frame to Delete Old Records (Days)</string>
    <string name="use_tst_server">Use Test Server?</string>
    <string name="prototype_cells_str">Prototype Cells</string>
    <string name="consignee_str">Consignee</string>
    <string name="cons_add1_str">Cons Add1</string>
    <string name="cons_add2_str">Cons Add2</string>
    <string name="cons_csz_str">Cons CSZ</string>
    <string name="cons_attn_str">Cons Attn</string>
    <string name="from_str">From : </string>
    <string name="shipper_str">Shipper</string>
    <string name="speacial_instructions_str">SPEACIAL INSTRUCTIONS SPEACIAL INSTRUCTIONS SPEACIAL INSTRUCTIONS</string>
    <string name="pod_str">POD</string>
    <string name="images_str">Images</string>
    <string name="photo_str">Photo</string>
    <string name="sign_str">Sign</string>
    <string name="add_item_str">Add Item</string>
    <string name="quantity_str">Quantity</string>
    <string name="description_str">Description</string>
    <string name="units_description_str">Description</string>
    <string name="units_str">Units</string>
    <string name="type_str">Type</string>
    <string name="back_str">Back</string>
    <string name="generate_bol_str">Generate BOL</string>
    <string name="text_env">***Test Environment*</string>
    <string name="text_or">Or</string>
    <string name="text_scan_code">Scan Code</string>
    <string name="text_dev_id_hint">Device Id</string>
    <string name="text_activation_code_hint">Activation Code</string>
    <string name="text_login">Log in</string>
    <string name="text_view_active_bols">View Active BOLs</string>
    <string name="consignee_id_str">Consignee ID</string>
    <string name="consignee_hash_str">Consignee #</string>
    <string name="bol_date_str">BOL Date</string>
    <string name="bol_hash_str">BOL #</string>
    <string name="vics_bol_str">VICS BOL</string>
    <string name="master_bol_str">Master BOL #</string>
    <string name="master_bol_smu_str">Master BOL (S/M/U)</string>
    <string name="shipment_hash_str">Shipment #</string>
    <string name="shipment_type_str">Shipment Type(_D:default)</string>
    <string name="load_hash_str">Load #</string>
    <string name="manifest_hash_str">Manifest #</string>
    <string name="stop_hash_str">Stop #</string>
    <string name="change_terms_str">Change Terms</string>
    <string name="scac_str">SCAC</string>
    <string name="carrier_name_str">Carieer Name</string>
    <string name="pro_hash_str">Pro #</string>
    <string name="seal_hash_str">Seal #</string>
    <string name="ucc_str">UCC</string>
    <string name="trailer_hash_str">Trailer #</string>
    <string name="trailer_loaded">Trailer Loaded</string>
    <string name="shipment_verified_str">Shipment Verified</string>
    <string name="declared_vales_doller_str">Declared values $</string>
    <string name="next_str">Next</string>
    <string name="trailer_loaded_str">Trailer loaded</string>
    <string name="receivers_str">Receiver\'s Name</string>
    <string name="address1_str">Address 1</string>
    <string name="address2_str">Address 2</string>
    <string name="city_str">City</string>
    <string name="state_str">State</string>
    <string name="zip_code_str">Zipcode</string>
    <string name="county_str">Country</string>
    <string name="add_to_addr_book_str">Add to address book</string>
    <string name="location_code">Location code</string>
    <string name="submit">Submit</string>
    <string name="pick_up_code_here">Enter pickup code here</string>
    <string name="shipper_id">Shipper Id</string>
    <string name="shipper_hash">Shipper #</string>
    <string name="bol_number">BOL Number</string>
    <string name="pro_number">Pro Number</string>
    <string name="shipper_bol_acnt">Shipper\'s SmartBOL Account #</string>
    <string name="shipper_company_name">Shipper\'s Company Name</string>
    <string name="consignee_company">Consignee;s company name</string>
    <string name="select_option">Select option</string>
    <string name="clear_signature">Clear Signature</string>
    <string name="name">Enter Name</string>
    <string name="messages">Messages</string>
    <string name="pic_up_list">Pickup List</string>
    <string name="general">General</string>
    <string name="Comment">Comment</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="error_msg_invalid_session">Invalid Session</string>
    <string name="error_msg_server_error">Server Error</string>
    <string name="error_msg_cannot_connect">Netword error</string>
    <string name="error_msg_no_internet">No internet Connection</string>
    <string name="error_msg_generic">Error Happened</string>
    <string name="logout">Logout</string>
    <string name="list">List</string>
    <string name="capture_doc">Capture DOC</string>
    <string name="doc">DOC</string>
    <string name="sign">Sign</string>
</resources>