<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/evice_id_edt_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="25dp"
        android:inputType="text"
        android:textSize="15sp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/device_id_edt_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/receivers_str"
            android:textColor="@color/login_edit_text_col"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activation_code_edt_layout"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="25dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activation_code_edt_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/login_edit_text_col"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="25dp"
        android:inputType="text"
        android:textSize="15sp"
        >

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_option"
            android:textColor="@color/login_edit_text_col"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_marginHorizontal="25dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        >

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Comment"
            android:textColor="@color/login_edit_text_col"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.github.gcacace.signaturepad.views.SignaturePad
        android:id="@+id/signature_pad"
        android:layout_width="wrap_content"
        android:layout_height="150dp"

        android:layout_marginTop="20dp"

        android:background="@color/gray"
       app:penColor="@color/cell_txt_col" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"

        android:orientation="horizontal">
        <Button

            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="center"
            android:background="@drawable/button_border"
            android:text="@string/cancel"/>
        <Button

            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:layout_marginRight="5dp"
            android:layout_gravity="center"
            android:background="@drawable/button_border"
            android:text="@string/clear"/>
        <Button

            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:layout_gravity="center"
            android:background="@drawable/button_border"
            android:text="@string/submit"/>
    </LinearLayout>


</LinearLayout>